--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2573,8 +2573,8 @@
  LEC_ci_she_li_ming:0 "赤色黎明"
  LEC_ci_she_li_ming_desc:0 "红与黑的旗帜已然升起，一轮从东方升起的红色太阳高悬在天际，我们从来没有像如今那样这么近的触摸到未来的边界。不再有压迫，不再有人能够高高在上的向他人发号施令，从人类诞生的数千万年来的第一次，我们实现了这真正的平等。"
 
- YUN_end_of_da_chaos:0 "中华永恒"
- YUN_end_of_da_chaos_desc:0 "历经多年军阀混战之后，中华依旧屹立不倒，无论这艘大船将驶向何方，当我们向雄立于世界之目标大步迈进时，我们的人民都将纵享“天国之安乐”。"
+ LEC_end_of_da_chaos:0 "中华永恒"
+ LEC_end_of_da_chaos_desc:0 "历经多年军阀混战之后，中华依旧屹立不倒，无论这艘大船将驶向何方，当我们向雄立于世界之目标大步迈进时，我们的人民都将纵享“天国之安乐”。"
 
  legcities.104.t:0 "青帮四分五裂"
  legcities.104.d:0 "经过数月的筹划，杜月笙的“腥风血雨”终于拉开了帷幕。青帮帮众如潮水般涌入上海滩，工部局与租界区相继燃起冲天烈焰，黑帮流氓们对洋人展开了骇人听闻的暴虐行径。青帮虽借混乱的东风暂掌沪上权柄，但是龙头联合会内早已暗潮涌动，几位枭雄为夺这东方巴黎的话事权撕破脸皮。最炙手可热者当属杜月笙，此人昔日统合青帮部众终结外国租界，他有着最多的人，最大的能量。黄金荣则另辟蹊径，誓以其手腕重划沪洋势力版图，让犯罪的黑金洪流漫灌黄浦江。神秘莫测的张啸林，欲凭玄洋会之人脉、大日本帝国之威势，借外部势力问鼎龙头。此外一向被称为“疯子”的王亚樵，王九哥，同左翼团体暗通款曲，誓要用犯罪之道引领东方走向革命。而上海的洪门们集中在旧国民革命军的领导人蒋介石的结义兄弟杨虎的手下，他欲联袂国民党旧部，扬起三民主义大旗，解放华夏苍生，同时充满自己的钱包，无论如何，如果黑帮们不想再来一次内讧他们必须在今天之内做出决断。"
