--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -721,8 +721,6 @@
  SHC_Sha_Xun: "维克托·沙逊"
  POLITICS_Sha_Xun_DESC:0 "维克多·沙逊爵士，第三代从男爵，是英籍犹太富商沙逊家族的第四代，商人及酒店经营者，塞法迪犹太人，来自富有的巴格达犹太人沙逊家族商人和银行家族。维克托爵士在第一次世界大战期间曾在皇家飞行队服役。他在1916年的一次飞机失事中幸存下来，但腿部受伤，这让他终生受苦。1924年，他的父亲去世，维克托继承了他的头衔，成为孟买第三代从男爵。他移居印度，在那里管理家族的纺织厂，并在印度立法议会任职。20世纪二三十年代，沙逊将大量财富从印度转移到中国上海，向当地经济投资了数百万美元，推动了上海的房地产繁荣。沙逊爵士经常在世界各地出差或旅游，他将时间分配在浦那、印度和上海两地。他收购了华懋地产公司、华懋酒店公司和至少50家其他公司。1929年，沙逊建造了华懋酒店以及其他大型酒店、办公楼和住宅，其中很多位于上海市中心的滨水区外滩(包括汉密尔顿大厦、新都城酒店和河堤)。他一度在外滩拥有1,800多处房产。是上海滩最富有的人。"
 
- LEC_di_guo_zong_du:0 "帝国总督"
-
  LEC_help_lep:0 "何东选择与宁系合作"
  LEC_help_chi:0 "何东选择与国民党合作"
  LEC_help_gxc:0 "何东选择与两广军阀合作"
@@ -739,12 +737,13 @@
  LEC_fu_hao_yi_hui4:0 "富豪议会"
  LEC_jing_zai_zhang_wo:0 "掌握一切"
  LEC_kuan_song_zheng_ce:0 "宽松政策"
- LEC_yi_wu_lao_don:0 "义务劳动"
+ LEC_make_shanghai_great_again:0 "远东不夜城"
  LEC_war_profiteering:0 "战争暴利"
  LEC_city_defant:0 "保卫城市"
  LEC_free_market_economy:0 "自由贸易"
  LEC_civil_rights_all_or_nothing:0 "保卫上海"
  LEC_true_shambala:0 "佛陀之梦"
+ LEC_industrial_peace_idea:0 "爱国企业家"
 
  LEC_syndicalist_party_HD:0 "上海总工会"
  LEC_syndicalist_party_HD_long:0 "旧工会残余"
@@ -774,7 +773,7 @@
  LEC_si_you_jing_cha_ju:0 "私有警察局"
  LEC_si_you_jing_cha_ju_desc:0 "那些雇佣兵们为集团出力不少，也死了一些弟兄，更何况在未来何氏集团手里也需要有一支可以使用的武装力量。于是[SHC.GetLeader]爵士亲自递上了一份合同，雇佣兵们愿意留下的就加入到新的上海特别市警局中。"
  LEC_shou_gou_guo_ming_re_bao:0 "收购民国日报"
- LEC_shou_gou_guo_ming_re_bao_desc:0 "《民国日报》由陈其美等人创立于1916年1月22日，主编为叶楚伧、邵力子，是中华革命党的主要报纸，后来一度成为中国国民党的党报。但是随着国民党败走，民国日报也日渐衰微。但是瘦死的骆驼比马大，这份报纸的底蕴还在。刚刚平定上海的何氏集团也需要在新闻业有所成就，这份报纸就是最好的铺路石。"
+ LEC_shou_gou_guo_ming_re_bao_desc:0 "《民国日报》由陈其美等人创立于1916年1月22日，主编为叶楚伧、邵力子，是中华革命党的主要报纸，后来一度成为中国国民党的党报。但是随着国民党败走，民国日报也日渐衰微。但是瘦死的骆驼比马大，这份报纸的底蕴还在。刚刚平定上海的何氏集团也需要在新闻业有所成就，何氏集团的光辉需要有人来宣传，这份报纸就是最好的铺路石。"
 
  LEC_tuo_yi_ying_guo_lao:0 "没有价值的盟友"
  LEC_tuo_yi_ying_guo_lao_desc:0 "现在是时候结束我们和英国人的暧昧关系了，他们如今已经失去了利用价值，如果他们能意识到这一点我们的未来还能和平相处，但他们要是意识不到..."
@@ -783,7 +782,7 @@
  LEC_cha_shou_di_fang:0 "插手地方"
  LEC_cha_shou_di_fang_desc:0 "中国现在乱作一团，作为中国最大城市的持有者何东爵士决定更深入的插手进去，但是仅有上海是不够的，我们必须选择一个合适的合作者。"
  LEC_ai_guo_xuan_chuan:0 "爱国宣传"
- LEC_ai_guo_xuan_chuan_desc:0 "无论如何上海市永远是中国的一部分，我们永远热爱中国。"
+ LEC_ai_guo_xuan_chuan_desc:0 "外有强敌环视，内有军阀割据，中华民族已然到了最危急的时刻，我们必须团结起来共赴国难，何东爵士决定在上海开展一场爱国宣传活动，号召全国人民团结起来共同抵抗外敌，尤其是日本人，他们从上海陷入火海的那一刻就在密谋着入侵上海，只可惜慢了一步被我们夺得先机。"
  LEC_shou_gou_jiu_zi_chan:0 "回收旧资产"
  LEC_shou_gou_jiu_zi_chan_desc:0 "虽然现在不在我们的手中，但是何氏集团在那里有许多的资产，更何况如今中国的乱象。我们相信只要提出一个他们无法拒绝的提议，他们会同意让我们收购香港的。"
  LEC_cheng_shi_an_bao_dui:0 "城市防卫队"
@@ -792,12 +791,12 @@
  LEC_tou_zi_jun_gong_ye_desc:0 "中国正逢大乱，各方势力打做一团，此时投资军火业，进能使我们支持的势力无往不利，退我们可以四方兜售狂捞一笔，总之没有我们亏本的可能性。"
  LEC_ti_gao_xiao_lv:0 "提高效率"
  LEC_ti_gao_xiao_lv_desc:0 "我们的重建工作的工作量一日胜过一日，因此工人的生产效率绝不能放缓，必须抓紧时间，大干特干！"
- LEC_yi_wu_lao_dong:0 "义务劳动"
- LEC_yi_wu_lao_dong_desc:0 "为了城市的未来，在重建阶段，每个公民都必须在一周内履行一定量的义务劳动，即便是何东爵士本人也不能逃避。"
+ LEC_yi_wu_lao_dong:0 "远东贸易中心"
+ LEC_yi_wu_lao_dong_desc:0 "上海市是世界金融之都之一，是一个不断蓬勃发展着的商业中心，有“远东梦巴黎”的美称。我们绝不会让这份美名受到任何的玷污，我们要让上海市再一次成为远东的贸易中心，让上海成为世界渴望之城。"
  LEC_tou_zi_ji_jian:0 "投资基建"
  LEC_tou_zi_ji_jian_desc:0 "良好的基础建设能使我们之后的建设效率得到更好的发挥。"
- LEC_zuo_yan_wei_lai:0 "着眼未来"
- LEC_zuo_yan_wei_lai_desc:0 "核科技是我们通往未来的敲门砖。"
+ LEC_zuo_yan_wei_lai:0 "让上海再次伟大"
+ LEC_zuo_yan_wei_lai_desc:0 "上海，这座美丽的远东明珠，东亚最庞大的城市，他有着要超越其他区域的发达程度，然而就是这样一座美丽的大都会却在工部局的管理下变得一团糟，经济下滑，毒虫遍地。而何东爵士的到来扭转了这一切，他让上海重新焕发光彩，而他也必然将使上海再次伟大！"
 
  LEC_zhong_cheng_de_shang_hai:0 "忠诚的上海"
  LEC_zhong_cheng_de_shang_hai_desc:0 "经过长时间的考虑之后，[SHC.GetLeader]爵士还是决定与协约国加深联系，作为大英帝国的忠诚他们需要为帝国尽职尽责。"
@@ -843,7 +842,7 @@
  LEC_zhan_zheng_bao_li:0 "战争暴利"
  LEC_zhan_zheng_bao_li_desc:0 "在整个中国，暴力和混乱至上，随着全球霸权们走向战争，世界其他地区也将很快发生同样的情况。然而，如此混乱的现实只会为我们的大都市孕育新的机遇，因此，维克托市长有一个计划。我们要进入战争这个如地狱般血腥的行业，这样我们就可以在其他人则像傻瓜一样挥霍和争斗的时候赚大钱，恰饱饱。在旧世界秩序的废墟之上，我们将建立一个世界前所未有的繁荣的金融帝国，因为只有一个真理——战争是一个骗局！" 
  LEC_dang_gui_zhen_zheng_de_huai_bao:0 "当归真佛的怀抱"
- LEC_dang_gui_zhen_zheng_de_huai_bao_desc:0 "作为一个犹太教徒，维克托显然是不太合格的，而比起犹太教，他显然对另一门宗教——佛教更感心情。而上海最不缺的就是各种各样的佛寺。一切迷茫的魂灵都将在佛陀的怀抱中得到救赎。"
+ LEC_dang_gui_zhen_zheng_de_huai_bao_desc:0 "作为一个犹太教徒，维克托显然是不太合格的，而比起犹太教，他显然对另一门宗教——佛教更感兴趣。而上海最不缺的就是各种各样的佛寺。一切迷茫的魂灵都将在佛陀的怀抱中得到救赎。"
  LEC_gui_xiang_gui_xiang:0 "归乡，归乡！"
  LEC_gui_xiang_gui_xiang_desc:0 "在数十年前，沙逊家族便是巴格达有名的贵族家庭，他们的贸易线自巴格达横跨整个亚欧，然而现在呢？尽管他们富可敌国，但却改变不了背井离乡的现实，他们的祖父大卫·沙逊在土耳其人的迫害下不得不抛妻弃子，沦为难民逃离巴格达。沙逊家族永远忘不了苏丹的残暴，现在，他们有能力时，他们将会发泄着数百年的仇恨。"
 
@@ -1473,7 +1472,7 @@
  SHCwaijiao.11.d:0 "曾经周游世界的作家阿尔道斯·赫胥黎在1926年这样说过：他从没见过任何一座城市像上海那样具有如此丰富的人性化内涵，给他留下了深刻的印象。“无论东方或西方，没有一座城市能够以它高密度的人口、明显的贫富差异和丰富多彩的生活给我留下这样的印象。”赫胥黎写道，“可以这样说，旧上海具有柏格森所说的那种蓬勃生机，并用一种赤裸裸的方式表现出来，也就是说，是一种不受限制的活力。上海就代表了生活本身。”"
  SHCwaijiao.11.a:0 "那么代价呢？"
  SHCwaijiao.12.t:0 "另一个世界"
- SHCwaijiao.12.d:0 "棚户区是一个充满绝望和希望的地方。棚户居民绝大多数是农村移民，他们现已生活在城市，也只有城市里才可能存在的各种职业维持生计，从这一意义上讲，他们已成为都市的一部分了。他们有些仍然住在最初的那个笼子中，但有的人已经修缮了草棚，加固了木板。尽管棚户区异常拥挤以及极低劣的生活条件，加之其居民的高失业率和就业不足的状况，使得城市其他阶层将棚户区只认作是“都市流浪汉”的收容所。归根到底，他们还只是不稳定的农村移民。对于这群人来说，工厂的职业是高不可攀的。尽管棚户区居民们的“上海梦”已经开始破碎，但是城市的诱惑力却依旧牢牢的攥着他们，让他们留下了，他们不愿意在离开这里。。\n\n一般认为产业工人是现代工业化城市中贫民区的主要居民，但工厂人却只是上海棚户贫民中的一小部分。毕竟对于上海工人而言，他们要证明自己能够在上海立足的第一步就是找一份稳定的工作，然后搬出棚户区，去过一个体面的生活。同样的，对于这些工人来说，最不能接受的就是失业再次回到棚户区。他们仿佛从云端坠入地狱，那些重回于此的人大多数都没能再走出去。酗酒、嗜赌，甚至染上毒瘾，总有一个会找上他们。"
+ SHCwaijiao.12.d:0 "棚户区是一个充满绝望和希望的地方。棚户居民绝大多数是农村移民，他们现已生活在城市，也只有城市里才可能存在的各种职业维持生计，从这一意义上讲，他们已成为都市的一部分了。他们有些仍然住在最初的那个笼子中，但有的人已经修缮了草棚，加固了木板。尽管棚户区异常拥挤以及极低劣的生活条件，加之其居民的高失业率和就业不足的状况，使得城市其他阶层将棚户区只认作是“都市流浪汉”的收容所。归根到底，他们还只是不稳定的农村移民。对于这群人来说，工厂的职业是高不可攀的。尽管棚户区居民们的“上海梦”已经开始破碎，但是城市的诱惑力却依旧牢牢的攥着他们，让他们留下了，他们不愿意在离开这里。\n\n一般认为产业工人是现代工业化城市中贫民区的主要居民，但工厂人却只是上海棚户贫民中的一小部分。毕竟对于上海工人而言，他们要证明自己能够在上海立足的第一步就是找一份稳定的工作，然后搬出棚户区，去过一个体面的生活。同样的，对于这些工人来说，最不能接受的就是失业再次回到棚户区。他们仿佛从云端坠入地狱，那些重回于此的人大多数都没能再走出去。酗酒、嗜赌，甚至染上毒瘾，总有一个会找上他们。"
  SHCwaijiao.12.a:0 "来到这里的唯一目的，就是离开这里"
  SHCwaijiao.13.t:0 "上海住房"
  SHCwaijiao.13.d:0 "在棚户区之外是真正的上海滩，英、美、法、德、俄、意、西班牙、挪威、荷兰的风格影响。其设计风格从罗马式、巴洛克式、文艺复兴时代建筑风格及至现代、当代样式，形态各异，姿彩纷呈。都市风景中还点缀有日本式甚至伊斯兰式的建筑。这些外来的欧洲风格的建筑，其中有许多夹杂着一些中国传统的建筑手法，很有些中西合璧的味道。与此同时，中国的传统建筑也存留其间。在外滩南面不到一英里的地方，就是真实可见的中国老城厢。除了“东方梦巴黎”，上海还被称为“万国建筑博览会”。\n\n只要有钱，在上海你能住上任何能够想象的住宅，西式洋房，有几层楼面，一个前庭花园，这是身份的象征。老式里弄、新式里弄，中西合璧，拥有现代生活一切设施。再奢靡一些，在近郊建一栋江南园林风格的大院子，这是皇帝都享受不了的生活。"
