--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -8,6 +8,7 @@
  nong_ming_right: "§R农民派§!"
 
  LEC_bu_mu_zi_wei: "千古一帝"
+ LEC_di_guo_zong_du:0 "帝国总督"
  LEC_ren_ming: "为人民而战"
  GXC_really_kaiser: "中华的凯撒\n§g其人身负普鲁士铁血传统与东方天命观之双重血脉，乃是万王之王，龙与鹰之主，一切的统治者，德意志的威廉三世，中华的威廉一世！§!"
  HNN_shen_pan_zhe: "裁决者"
