--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -5260,16 +5260,29 @@
  hnnshenbing.8.a:0 "武装起来"
 
 #彭璜
- HNN_xin_gong_ren_yun_dong:0 "新工人运动"
+ HNN_xin_gong_ren_yun_dong:0 "重建新民学会"
  HNN_xin_gong_ren_yun_dong_desc:0 " "
- HNN_yong_wu_ting_xi_de_tu_di_gai_ge:0 "永不停息的土地改革"
+ HNN_yong_wu_ting_xi_de_tu_di_gai_ge:0 "建立农村公社"
  HNN_yong_wu_ting_xi_de_tu_di_gai_ge_desc:0 " "
+ HNN_chong_jian_huo_bi:0 "成立工人联合体"
+ HNN_chong_jian_huo_bi_desc:0 " "
  HNN_zi_xia_er_shang_de_gaI_ge:0 "自下而上的改革"
  HNN_zi_xia_er_shang_de_gaI_ge_desc:0 " "
- HNN_chong_jian_huo_bi:0 "货币改革"
- HNN_chong_jian_huo_bi_desc:0 " "
- HNN_jiao_yu_ge_xin:0 "革新教育"
+ HNN_jiao_yu_ge_xin:0 "摧毁资产阶级根基"
  HNN_jiao_yu_ge_xin_desc:0 " "
+ HNN_bu_zai_ya_po:0 "拥抱民主，而非集权"
+ HNN_bu_zai_ya_po_desc:0 " "
+ HNN_yi_lao_dong_qu_dai_huo_bi:0 "以劳动取代货币"
+ HNN_yi_lao_dong_qu_dai_huo_bi_desc:0 " "
+ HNN_hu_lao:0 "“互劳”"
+ HNN_hu_lao_desc:0 " "
+ HNN_hu_zu:0 "“互助”"
+ HNN_hu_zu_desc:0 " "
+ HNN_hu_ai:0 "“互爱”"
+ HNN_hu_ai_desc:0 " "
+ HNN_you_ai_gong_yi:0 "消灭国家概念"
+ HNN_you_ai_gong_yi_desc:0 " "
+ 
 
  CHI_xue_yue: "薛岳"
  CHI_zhang_fakui: "张发奎"
