--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1635,7 +1635,7 @@
  LEC_triad3:0 "再投资生意"
  LEC_triad3_desc:0 "我们已经从各种非法活动中获得了足够的利润，让这些城市摆脱了烦人的腐败问题（虽然和我们没啥关系），并且让鼓励外资在我们的“保护”下回流。"
  LEC_arch_collaborator_zhang_xiaolin_zones_in:0 "“大汉奸”张啸林谋士入局"
- LEC_arch_collaborator_zhang_xiaolin_zones_in_desc:0 "张啸林本是青帮三大佬中的老末，却趁杜月笙与黄金荣内斗正酣、基督教狂信徒及江青等势力搅局之际，暗中坐收渔翁之利。他周旋于各派系间挑拨离间，待对手惊觉身陷罗网已无路可退。此人早与日本暗通款曲，既是日方在沪头号代理人，亦是其染指华东的备用棋子——如今既已权倾沪上青帮，这番勾结倒也不必再遮遮掩掩。而日本则正借其开凿的缝隙加紧渗透中华大地，一面在使馆城市重树旭日旗，一面与满洲政权遥相呼应。眼下张啸林虽仍顶着“共荣圈上海代言人”的名号，实则已成提线木偶。他既要扩张青帮黑产为东京输血，又得提防主子反客为主，这刀尖上的权柄不知还能攥紧几时。"
+ LEC_arch_collaborator_zhang_xiaolin_zones_in_desc:0 "张啸林本是青帮三大佬中的老末，却趁杜月笙与黄金荣内斗正酣、基督教狂信徒及王亚樵等势力搅局之际，暗中坐收渔翁之利。他周旋于各派系间挑拨离间，待对手惊觉身陷罗网已无路可退。此人早与日本暗通款曲，既是日方在沪头号代理人，亦是其染指华东的备用棋子——如今既已权倾沪上青帮，这番勾结倒也不必再遮遮掩掩。而日本则正借其开凿的缝隙加紧渗透中华大地，一面在使馆城市重树旭日旗，一面与满洲政权遥相呼应。眼下张啸林虽仍顶着“共荣圈上海代言人”的名号，实则已成提线木偶。他既要扩张青帮黑产为东京输血，又得提防主子反客为主，这刀尖上的权柄不知还能攥紧几时。"
  LEC_employ_tmkkd:0 "雇佣对支问题解决国民同盟"
  LEC_employ_tmkkd_desc:0 "对支问题解决国民同盟乃是一活跃于上海的亲日特殊利益集团，中日成员混杂其间，皆以强化与日本本土之联系为宗旨。就连惯用江湖手段的黄金荣，也誓言效忠日本并协助整顿使馆城市秩序，故须对对支问题解决国民同盟实施改组整肃，使其宣誓效忠，同时肃清街头异议势力来验明正身。"
  LEC_talks_anhui_communications_clique:0 "同交通系对话"
@@ -2311,6 +2311,9 @@
  LEC_MING_FUNAN:0 "抚南都护府"
  LEC_MING_FUNAN_ADJ:0 "抚南都护府"
  LEC_MING_FUNAN_DEF:0 "抚南都护府"
+ LEC_MING_DADA:0 "鞑靼都护府"
+ LEC_MING_DADA_ADJ:0 "鞑靼都护府"
+ LEC_MING_DADA_DEF:0 "鞑靼都护府"
  LEC_china:0 "中国国际托管区"
  LEC_china_ADJ:0 "国际托管区"
  LEC_china_DEF:0 "中国国际托管区"
@@ -2341,24 +2344,27 @@
  LEC_FREE:0 "中华自由地区"
  LEC_FREE_ADJ:0 "中华自由地区"
  LEC_FREE_DEF:0 "中华自由地区"
- LEC_SZC_FREE:0 "四川自由地区"
- LEC_SZC_FREE_ADJ:0 "四川自由地区"
- LEC_SZC_FREE_DEF:0 "四川自由地区"
+ LEC_SZC_FREE:0 "川渝康自由地区"
+ LEC_SZC_FREE_ADJ:0 "川渝康自由地区"
+ LEC_SZC_FREE_DEF:0 "川渝康自由地区"
  LEC_SHC_FREE:0 "上海自由市"
  LEC_SHC_FREE_ADJ:0 "上海自由市"
  LEC_SHC_FREE_DEF:0 "上海自由市"
  LEC_HNN_FREE:0 "湖南自由地区"
  LEC_HNN_FREE_ADJ:0 "湖南自由地区"
  LEC_HNN_FREE_DEF:0 "湖南自由地区"
- LEC_GXC_FREE:0 "粤桂自由地区"
- LEC_GXC_FREE_ADJ:0 "粤桂自由地区"
- LEC_GXC_FREE_DEF:0 "粤桂自由地区"
+ LEC_GXC_FREE:0 "粤桂琼自由地区"
+ LEC_GXC_FREE_ADJ:0 "粤桂琼自由地区"
+ LEC_GXC_FREE_DEF:0 "粤桂琼自由地区"
  LEC_SHX_FREE:0 "山西自由地区"
  LEC_SHX_FREE_ADJ:0 "山西自由地区"
  LEC_SHX_FREE_DEF:0 "山西自由地区"
  LEC_ANQ_FREE:0 "安徽自由地区"
  LEC_ANQ_FREE_ADJ:0 "安徽自由地区"
  LEC_ANQ_FREE_DEF:0 "安徽自由地区"
+ LEC_YUN_FREE:0 "云贵自由地区"
+ LEC_YUN_FREE_ADJ:0 "云贵自由地区"
+ LEC_YUN_FREE_DEF:0 "云贵自由地区"
 
  LEC_du_yue_sheng: "杜月笙"
  LEC_Huang_Jinrong: "黄金荣"
@@ -2450,6 +2456,7 @@
  LEC_da_ming_back:0 "§H旧日王朝已然东山再起§!"
  LEC_long_tou_control:0 "§H龙头们的掌控将持续§!"
 
+ LEC_chong_jian_MON:0 "建立鞑靼都护府"
  LEC_chong_jian_GEA:0 "建立安南都护府"
  LEC_chong_jian_AST:0 "建立抚南都护府"
 
