--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -921,9 +921,6 @@
  leche.20.t:0 "犹太阴谋"
  leche.20.d:0 "自从何东爵士夺取了上海的政权之后，在上海的欧洲人圈子内就一直有一股传言说何东的父亲正是在《锡安长老议定书》上签字的300犹太长老之一，他们阴谋夺取全世界政权的计划正在稳步进行，黑色星期一正是他们制造的。而随着一名法号叫做释照空的白人和尚公开在报纸上抨击何东爵士开始，各家报业就疯了一般不断的刊登相关内容。虽然也有报纸刊登了释照空的身世说明了他本人也是一名犹太人，但是这样的报道并没有引起太多人的关注。对于这样的舆论没有人知道何东爵士是怎么想的。但据何氏集团下属的一家出版社的一名编辑在和他朋友的聊天中透露，报业销售量节节攀升，他们出版社最近要乐疯，这段时间的销售量比过去三四个月的销售量加起来还要多，年末可以拿一大笔奖金了。"
  leche.20.a:0 "或许那些谣言就是何东本人授意的？"
- leche.21.t:0 "英语补习班"
- leche.21.d:0 "随着英属上海的官方语言的确立，现在政府各部门都开始要求职员必须会正常使用英语交流。对此目前最大的趋势就是各种语言补习班供应不求，而且价格不断上涨。尽管何氏集团不断否认和那些新增的语言补习班有关系，但是人们还是普遍猜测何氏集团在背后肯定有参与。他们不可能放过这种赚钱的机会。"
- leche.21.a:0 "真该死阿，何氏集团"
  shche.1.t:0 "娼妓"
  shche.1.d:0 "下午七点时分，当你漫步于敏体尼荫路时，就会看到大世界到南洋桥一带站着成群结队的姑娘。以前租界警察对这种下流交易熟视无睹，这些自诩高贵的外邦人对他们的殖民地保持着“就让他们堕落腐败下去，这是这些蛮荒人的宿命”...而现在理事会瓦解后呢，她们见到警察甚至会上前去招揽生意，这些警察和黑帮别无二样。\n\n而幽窄昏暗的街道旁边，妓院鳞次栉比，门前都悬挂着红灯笼，令人悚然。爵士乐从六七家灯火通明的酒店和酒吧中传出，打破夜晚的宁静。这里几乎集中了所有国度的妓女：中国姑娘涂着胭脂的脸颊、日本妇人用化妆粉抹得煞白的脸、从哈尔滨来的俄罗斯姑娘总是呢喃着:“我的王子，请给我买一小瓶桑娅葡萄酒吧。”这里甚至可以找到从老巴巴里海岸区来的美国姑娘和从马赛下等酒吧来的老鸨。"
  shche.1.a:0 "至少你能说一句“应有尽有”"
@@ -955,6 +952,9 @@
  shche.10.t:0 "绯闻"
  shche.10.d:0 "维克多的性生活是人们的热门议论话题。据说他去见了塞尔·沃罗诺夫（Serge·Voronoff），这位生于俄罗斯的外科医生，提倡将狒狒的睪丸薄片移植到人类的阴囊中，借此让人重振雄风。在维克多的日记里，除了和中国政商人士共进午餐的纪录外，还小心翼翼贴了他拍摄的欧洲及中国女性裸照。其中，有些人风情万种地斜倚沙发，有些摆着运动姿势，或者裸胸站在佛像前，宝石从精心制作的头饰垂下，挂在她们的乳头上。他还雇了一些歌舞女郎来当「秘书」。有一次，他的商业伙伴哈利．阿诺德（Harry·Arnold）正在华懋的办公室里和维克多开会，一位年轻女士进来，说她要离开上海了。维克多从桌子里抽出一只装满钻石手镯的抽屉，让她挑一个当礼物。当她说没办法决定要哪一个的时候，维克多怒气冲冲地说：“整个抽屉拿走！”然后继续开会。还有流言说维克多是双性恋。某次派对，维克多把手放在一位中国富有金融家女儿的膝盖上，她表达不满，并且把他的手推开，维克多立刻改把手放在她哥哥的膝盖上。"
  shche.10.a:0 "这才是他的真正目的"
+ shche.11.t:0 "英语补习班"
+ shche.11.d:0 "随着英属上海的官方语言的确立，现在政府各部门都开始要求职员必须会正常使用英语交流。对此目前最大的趋势就是各种语言补习班供应不求，而且价格还在不断上涨。尽管何氏集团和沙逊集团都在不断否认和那些新增的语言补习班有关系，但是人们还是普遍猜测何氏集团在背后肯定有参与。毕竟他们肯定不可能放过这种赚钱的机会。"
+ shche.11.a:0 "真该死阿"
 
 ###基督徒
  LEC_TZ: "圣方济各使徒国"
@@ -1042,34 +1042,6 @@
  LEC_luo_tuo_zhen_yan:0 "骆驼针眼"
  LEC_luo_tuo_zhen_yan_desc:0 "【马太福音19:23】“于是耶稣对门徒说，我实在告诉你们，财主进诸天的国是难的”，【马太福音19:24】“我又告诉你们，骆驼穿过针的眼，比财主进神的国还容易”" 
 
- lecjidu.1.t:0 "上海教会申请加入帝国公约"
- lecjidu.1.d:0 "被我们资助的上海教会终于发了寻求庇护的消息，但是我们和法国佬的战火迫在眉睫，我们该怎么选？"
- lecjidu.1.a:0 "欢迎加入帝国公约！"
- lecjidu.1.b:0 "代价太大了"
- lecjidu.2.t:0 "祝圣仪式"
- lecjidu.2.d:0 "今日的教堂正中央悬挂着一张孙先生的画像，而教堂中则是人山人海，来自各地的信徒汇聚于此，他们将要见证孙中山先生的封圣仪式。仪式由[SHC.GetLeader]主教主持，他宣读了来自梵蒂冈的诏书，宣布孙中山正式被册封为圣人。由于其身份的特殊性，经过孙先生的遗孀宋庆龄女士的赞同之后，孙先生生前穿着的一件常服被作为圣遗物带入教堂，供信徒瞻仰。在[SHC.GetLeader]主教的布道中，他讲述了孙先生对于耶稣基督的虔诚与他的拳拳爱国之心，闻者或感其忠心，或痛心于如今中华分裂之景象，纷纷落泪。数百双泪眼婆娑的眼睛直视着教堂中央那幅孙先生的画像，而画中的孙先生仿佛也感受到了教堂中弥漫着的悲伤气息，竟从双眼中落下一行清泪。见证这一刻的信徒们无不高呼着孙先生显灵。"
- lecjidu.2.a:0 "愿耶稣与孙先生同在"
- lecjidu.3.t:0 "名誉大团长"
- lecjidu.3.d:0 "在我们设立圣方济各骑士团，追封了为国玉碎的国民革命军总司令蒋中正先生为首任大团长之后，[SHC.GetLeader]主教便写信给了蒋中正先生的独子蒋经国先生。信中阐述了主教对于其父蒋中正先生的敬仰之情，和对国民革命失败的惋惜，在信的最后，[SHC.GetLeader]主教表示希望由蒋经国先生担任圣方济各骑士团的名誉大团长。\n\n在信寄出去之后仿佛石沉大海一般，长时间没有回应，但是最终直到昨日，我们终于收到了蒋经国先生的回信。信中经国先生表示了对主教的感谢，以及自己愿意被册封为圣方济各骑士团的名誉大团长，但是由于国内形势原因，他无法来到上海受封。"
- lecjidu.3.a:0 "无论如何蒋经国先生都是我们的大团长"
- lecjidu.4.t:0 "我们的领导者"
- lecjidu.4.d:0 "出乎所有人预料的是我们真的在上海火并中豪取了胜利，迷失的上海城回到了主的怀抱。而当我们将要开始重建上海时，我们面临着一个尴尬的问题，在上海目前有两位分区主教。因为八省战火而撤离到上海的南京宗座代牧区主教于斌很难想象在短短的几个月内上海居然发生了这么大的巨变。尽管按照规范来说上海特别市的政权当然应该由上海宗座代牧区主宰，而南京代牧区和上海代牧区事实上也是平等的，但是南京的政治地位无论如何也远高于上海。如果未来教宗宣布在中国建立圣统制，被晋升为总教区的一定是南京而不是上海。况且相对于中国人身份的于斌主教来说，由身为法国人的惠济良主教担任上海特别市临时市长无疑是尴尬的。那么我们究竟要选择谁来主宰未来的上海呢？"
- lecjidu.4.a:0 "惠济良主教更合适"
- lecjidu.4.b:0 "于斌神父众望所归"
- lecjidu.5.t:0 "拆除夜总会"
- lecjidu.5.d:0 "夜店是撒旦控制的世界的一部分，它们的目的是让自己屈服于罪恶的欲望。保罗在以弗所书4:17-24中对基督徒说话时谈到世俗行为的问题，“所以我告诉你们，并在主里坚持，你们不可再像外邦人那样生活，他们的想法。他们的悟性昏暗，与神的生命隔绝，因为他们的心刚硬而无知。失去了所有的敏感，他们把自己交给了肉欲，以致沉迷于各种不净，不断地贪求更多。然而，你并不是这样认识基督的。你肯定听说过他，并按照耶稣里的真理在他身上受教。关于你从前的生活方式，你被教导要脱去你的旧自我，这个旧自我正被它欺骗的欲望所腐蚀；在你的思想态度上被更新；并穿上新的自我，被创造成在真正的公义和圣洁中与上帝相似。保罗在这里描述了那些排斥神，放纵肉体，贪心行各样污秽的人。显然，上帝不希望我们如此轻易地、故意地把自己交给罪。\n\n上海是一个繁华的大都市，有数不尽的夜总会，四处充满了淫靡的气息。为了挽救上海市民，为了将这些不道德之物驱逐出去，我们将禁止并拆除上海的每一个夜总会。"
- lecjidu.5.a:0 "愿上帝保佑"
- lecjidu.6.t:0 "益世广播电台"
- lecjidu.6.d:0 "《益世报》是一家隶属于天主教会的报纸，由比利时籍神父雷鸣远于1915年10月10日在天津创办。《益世报》内容并不拘泥于宗教，涉及范围广泛，长期持反日爱国之立场，是新文化运动时期京津地区的重要报纸。在五四运动中，《益世报》甚至是五四运动中第一家被查封的报纸，后来在于斌主教带领下，逐步形成天津、北平、南京、上海、西安、重庆的《益世报》网。\n\n而随着时代的发展，纸质媒体终究有一天会被淘汰，尽管现在这样的趋势还不明显，但是高瞻远瞩的[SHC.GetLeader]主教决定创办益世广播电台，原《益世报》社长杨慕时任台长，同样的除了必要的传道工作之外，我们也还会播出新闻、评论、科教、戏曲及音乐节目。"
- lecjidu.6.a:0 "呼号:XPBK"
- lecjidu.7.t:0 "对新教的态度"
- lecjidu.7.d:0 "从我们开始排除异教的存在以来，同属耶稣基督赐福的新教徒的地位就显得尤为尴尬。上海有着许多新教派别，如江长川牧师在上海昆山路景林堂传播卫斯理宗，丁光训家族传播着圣公宗；又比如1912年成立于上海的基督教青年会，他们的一位干事李储文被怀疑与周恩来麾下中央特科来往密切；或是以刚刚从美国毕业返回的吴贻芳女士的浸信会，他们在中国的传教历史可以追述至1836...\n\n这些五花八门的新教信仰，散布在上海各地，尽管我们可以向对待异教一般将他们驱逐出去，但是梵蒂冈对于这些新教徒一直是模棱两可的态度...况且无论如何我们都信仰耶稣基督。"
- lecjidu.7.a:0 "对他们视而不见"
- lecjidu.7.b:0 "给他们一些政府席位吧"
- lecjidu.7.c:0 "新教徒，滚出去！"
- lecjidu.9.t:0 "白马修道院"
- lecjidu.9.d:0 "白马寺位于河南省洛阳老城以东21公里处，北依邙山，南临洛河，创建于东汉永平十一年，是佛教传入中国后兴建的第一座寺院，白马寺建立之后，中国“僧院”便泛称为“寺”，白马寺也因此被认为是中国佛教的发源地，有中国佛教的“祖庭”和“释源”之称。\n\n不过这已经是旧历史了，基督徒的军队攻占洛阳后，[SHC.GetLeader]主教干的第一件事就是宣布将这座悠久历史的寺庙改建为修道院。从今往后白马寺不再供奉佛祖，而会成为基督最忠诚的修道院。在经过圣座的同意之后洛阳教区的主教座堂将迁移至白马修道院，并且将洛阳教区升格为河南教省的总教区，原本的开封总教区降格为教区。开封总教区的原总主教谭维新主教担任洛阳总教区的主教。"
- lecjidu.9.a:0 "不错，不错"
  Shcjidu.1.t:0 "震旦女子文理学院"
  Shcjidu.1.d:0 "长期以来我们的教育都只顾及到了那些男性教友们，这是一件不对的事情，上帝平等的爱着他的所有子民。正如【哥林多前书11:11】然而照主的安排，女也不是无男，男也不是无女。因为女人原是由男人而出，男人也是由女人而出，但万有都是出乎神。为了实现女性教育的突破，[SHC.GetLeader]主教委托美国圣心修女会主办，创立震旦女子文理学院，挂名在由法国耶稣会开办的震旦大学之下，校长和常务校董也由震旦大学的胡文耀与才尔孟兼任，但在财政、行政中均完全独立。教学使用英文而非法文。震旦女子文理学院下设中文、英文、教育、经济、社会、化学、家政七系。"
  Shcjidu.1.a:0 "第一所天主教会女子大学"
@@ -1090,6 +1062,34 @@
  Shcjidu.6.t:0 "向梵蒂冈宣战"
  Shcjidu.6.d:0 "在我们未参与的情况下，枢机主教竟然选举了一位严重背叛天主教价值观的教宗，他胆敢如此谄媚于社会主义国家，这令全世界的天主教徒们感到了莫大的背叛。曾去我们无可奈何的接受了这一事实，但是如今我们严肃的拒绝这一选择，我们要求梵蒂冈重新选举一位真正适合成为主的代言者的教宗，我们绝不承认这该死的伪教宗，他的存在只会分裂我们的信仰，他的存在本身就是对我们信仰的玷污！"
  Shcjidu.6.a:0 "他们必须为之忏悔！"
+ Shcjidu.7.t:0 "白马修道院"
+ Shcjidu.7.d:0 "白马寺位于河南省洛阳老城以东21公里处，北依邙山，南临洛河，创建于东汉永平十一年，是佛教传入中国后兴建的第一座寺院，白马寺建立之后，中国“僧院”便泛称为“寺”，白马寺也因此被认为是中国佛教的发源地，有中国佛教的“祖庭”和“释源”之称。\n\n不过这已经是旧历史了，基督徒的军队攻占洛阳后，[SHC.GetLeader]主教干的第一件事就是宣布将这座悠久历史的寺庙改建为修道院。从今往后白马寺不再供奉佛祖，而会成为基督最忠诚的修道院。在经过圣座的同意之后洛阳教区的主教座堂将迁移至白马修道院，并且将洛阳教区升格为河南教省的总教区，原本的开封总教区降格为教区。开封总教区的原总主教谭维新主教担任洛阳总教区的主教。"
+ Shcjidu.7.a:0 "不错，不错"
+ Shcjidu.8.t:0 "对新教的态度"
+ Shcjidu.8.d:0 "从我们开始排除异教的存在以来，同属耶稣基督赐福的新教徒的地位就显得尤为尴尬。上海有着许多新教派别，如江长川牧师在上海昆山路景林堂传播卫斯理宗，丁光训家族传播着圣公宗；又比如1912年成立于上海的基督教青年会，他们的一位干事李储文被怀疑与周恩来麾下中央特科来往密切；或是以刚刚从美国毕业返回的吴贻芳女士的浸信会，他们在中国的传教历史可以追述至1836...\n\n这些五花八门的新教信仰，散布在上海各地，尽管我们可以向对待异教一般将他们驱逐出去，但是梵蒂冈对于这些新教徒一直是模棱两可的态度...况且无论如何我们都信仰耶稣基督。"
+ Shcjidu.8.a:0 "对他们视而不见"
+ Shcjidu.8.b:0 "给他们一些政府席位吧"
+ Shcjidu.8.c:0 "新教徒，滚出去！"
+ Shcjidu.9.t:0 "益世广播电台"
+ Shcjidu.9.d:0 "《益世报》是一家隶属于天主教会的报纸，由比利时籍神父雷鸣远于1915年10月10日在天津创办。《益世报》内容并不拘泥于宗教，涉及范围广泛，长期持反日爱国之立场，是新文化运动时期京津地区的重要报纸。在五四运动中，《益世报》甚至是五四运动中第一家被查封的报纸，后来在于斌主教带领下，逐步形成天津、北平、南京、上海、西安、重庆的《益世报》网。\n\n而随着时代的发展，纸质媒体终究有一天会被淘汰，尽管现在这样的趋势还不明显，但是高瞻远瞩的[SHC.GetLeader]主教决定创办益世广播电台，原《益世报》社长杨慕时任台长，同样的除了必要的传道工作之外，我们也还会播出新闻、评论、科教、戏曲及音乐节目。"
+ Shcjidu.9.a:0 "呼号:XPBK"
+ Shcjidu.10.t:0 "拆除夜总会"
+ Shcjidu.10.d:0 "夜店是撒旦控制的世界的一部分，它们的目的是让自己屈服于罪恶的欲望。保罗在以弗所书4:17-24中对基督徒说话时谈到世俗行为的问题，“所以我告诉你们，并在主里坚持，你们不可再像外邦人那样生活，他们的想法。他们的悟性昏暗，与神的生命隔绝，因为他们的心刚硬而无知。失去了所有的敏感，他们把自己交给了肉欲，以致沉迷于各种不净，不断地贪求更多。然而，你并不是这样认识基督的。你肯定听说过他，并按照耶稣里的真理在他身上受教。关于你从前的生活方式，你被教导要脱去你的旧自我，这个旧自我正被它欺骗的欲望所腐蚀；在你的思想态度上被更新；并穿上新的自我，被创造成在真正的公义和圣洁中与上帝相似。保罗在这里描述了那些排斥神，放纵肉体，贪心行各样污秽的人。显然，上帝不希望我们如此轻易地、故意地把自己交给罪。\n\n上海是一个繁华的大都市，有数不尽的夜总会，四处充满了淫靡的气息。为了挽救上海市民，为了将这些不道德之物驱逐出去，我们将禁止并拆除上海的每一个夜总会。"
+ Shcjidu.10.a:0 "愿上帝保佑"
+ Shcjidu.11.t:0 "我们的领导者"
+ Shcjidu.11.d:0 "出乎所有人预料的是我们真的在上海火并中豪取了胜利，迷失的上海城回到了主的怀抱。而当我们将要开始重建上海时，我们面临着一个尴尬的问题，在上海目前有两位分区主教。因为八省战火而撤离到上海的南京宗座代牧区主教于斌很难想象在短短的几个月内上海居然发生了这么大的巨变。尽管按照规范来说上海特别市的政权当然应该由上海宗座代牧区主宰，而南京代牧区和上海代牧区事实上也是平等的，但是南京的政治地位无论如何也远高于上海。如果未来教宗宣布在中国建立圣统制，被晋升为总教区的一定是南京而不是上海。况且相对于中国人身份的于斌主教来说，由身为法国人的惠济良主教担任上海特别市临时市长无疑是尴尬的。那么我们究竟要选择谁来主宰未来的上海呢？"
+ Shcjidu.11.a:0 "惠济良主教更合适"
+ Shcjidu.11.b:0 "于斌神父众望所归"
+ Shcjidu.12.t:0 "名誉大团长"
+ Shcjidu.12.d:0 "在我们设立圣方济各骑士团，追封了为国玉碎的国民革命军总司令蒋中正先生为首任大团长之后，[SHC.GetLeader]主教便写信给了蒋中正先生的独子蒋经国先生。信中阐述了主教对于其父蒋中正先生的敬仰之情，和对国民革命失败的惋惜，在信的最后，[SHC.GetLeader]主教表示希望由蒋经国先生担任圣方济各骑士团的名誉大团长。\n\n在信寄出去之后仿佛石沉大海一般，长时间没有回应，但是最终直到昨日，我们终于收到了蒋经国先生的回信。信中经国先生表示了对主教的感谢，以及自己愿意被册封为圣方济各骑士团的名誉大团长，但是由于国内形势原因，他无法来到上海受封。"
+ Shcjidu.12.a:0 "无论如何蒋经国先生都是我们的大团长"
+ Shcjidu.13.t:0 "祝圣仪式"
+ Shcjidu.13.d:0 "今日的教堂正中央悬挂着一张孙先生的画像，而教堂中则是人山人海，来自各地的信徒汇聚于此，他们将要见证孙中山先生的封圣仪式。仪式由[SHC.GetLeader]主教主持，他宣读了来自梵蒂冈的诏书，宣布孙中山正式被册封为圣人。由于其身份的特殊性，经过孙先生的遗孀宋庆龄女士的赞同之后，孙先生生前穿着的一件常服被作为圣遗物带入教堂，供信徒瞻仰。在[SHC.GetLeader]主教的布道中，他讲述了孙先生对于耶稣基督的虔诚与他的拳拳爱国之心，闻者或感其忠心，或痛心于如今中华分裂之景象，纷纷落泪。数百双泪眼婆娑的眼睛直视着教堂中央那幅孙先生的画像，而画中的孙先生仿佛也感受到了教堂中弥漫着的悲伤气息，竟从双眼中落下一行清泪。见证这一刻的信徒们无不高呼着孙先生显灵。"
+ Shcjidu.13.a:0 "愿耶稣与孙先生同在"
+ Shcjidu.14.t:0 "上海教会申请加入帝国公约"
+ Shcjidu.14.d:0 "被我们资助的上海教会终于发了寻求庇护的消息，但是我们和法国佬的战火迫在眉睫，我们该怎么选？"
+ Shcjidu.14.a:0 "欢迎加入帝国公约！"
+ Shcjidu.14.b:0 "代价太大了"
 
 ###新教
  SHC_CHR: "上海总教区"
