--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2436,6 +2436,8 @@
  LEC_Kot_Siu_Wong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1894年\n大清帝国 广东省惠州府博罗县罗阳镇水西村\n§Y派系：§!§g14K§!"
  LEC_yu_li_kui: "余立奎"
  POLITICS_LEC_yu_li_kui_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1889年\n大清帝国 安徽省肥东县\n§Y派系：§!§g斧头帮§!\n§Y军旅生涯：§!§g余立奎，1910年，毕业于安徽陆军讲武堂，同年加入中国同盟会，先后参加了辛亥革命和讨袁战争。大革命失败后与王亚樵一起来到上海，后参与组织王亚樵的铁血锄奸团。§!"
+ LEC_hua_ke_zhi: "华克之"
+ POLITICS_LEC_hua_ke_zhi_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1902年12月20日\n大清帝国 江苏省宝应县\n§Y派系：§!§g斧头帮§!\n§Y军旅生涯：§!§g华克之，他在中学时即加入国民党，大革命失败后流亡上海加入中国工团党，是工团党与王亚樵交流的负责人。§!"
  LEC_Wang_Yaqiao: "王亚樵"
  POLITICS_WANG_YA_QIAO_DESC:0 "王亚樵，别名鼎，字九光，故江湖人士尊称其为九哥。在1887年2月7日生于安徽合肥磨店乡，在早年间他曾参与同盟会，在失败之后流亡上海，建立起了斧头帮，开始闯荡江湖。在上海滩内，斧头帮也一直充当着工人们的保护者，工人们向帮会缴纳会费，而当工人要罢工，要讨薪之时，王亚樵则会带领着斧头帮冲到最前线，与巡捕们大打出手，这使得他在工人中有口皆碑，而在使馆城市官僚中恶名昭彰。也因为在工人中的威望，斧头帮的情报工作是上海帮会中最出色的，他们往往掌握着最有价值的情报。在北伐战争失败后，王亚樵也由于早年间的经历他一度与国民党左派人士走得很近，而国民党右派如戴笠则曾是他的门徒。北伐战争与上海起义期间，他都参与其中，在接连失败后，他仍通过上海不断的为国民党输送物资。\n\n在夺得政权之前，王亚樵就对其他帮会深感不满，他们的所作所为令人作呕。而在夺权之后，他的不满在与日俱增，尤其是对香港义安社那帮毒虫，他对这些人毫无善意可言。现在，他成功夺取了权力，他将按照自己的意愿塑造这个城市，让那些令人作呕的东西从此消失。"
  POLITICS_WANG_YA_QIAO_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1887年2月7日\n大清帝国 安徽省合肥磨店乡\n§Y派系：§!§g斧头帮§!\n§Y军旅生涯：§!§g王亚樵，别名鼎，字九光，故江湖人士尊称其为九哥。在1887年2月7日生于安徽合肥磨店乡，在早年间他曾参与同盟会，在失败之后流亡上海，建立起了斧头帮，开始闯荡江湖。在上海滩内，斧头帮也一直充当着工人们的保护者，工人们向帮会缴纳会费，而当工人要罢工，要讨薪之时，王亚樵则会带领着斧头帮冲到最前线，与巡捕们大打出手，这使得他在工人中有口皆碑，而在使馆城市官僚中恶名昭彰。也因为在工人中的威望，斧头帮的情报工作是上海帮会中最出色的，他们往往掌握着最有价值的情报。在北伐战争失败后，王亚樵也由于早年间的经历他一度与国民党左派人士走得很近，而国民党右派如戴笠则曾是他的门徒。北伐战争与上海起义期间，他都参与其中，在接连失败后，他仍通过上海不断的为国民党输送物资。§!"
