--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -562,6 +562,9 @@
  lecgong.16.t:0 "打开保险库"
  lecgong.16.d:0 "上海有着资本主义开设的数不胜数的银行，革命不是过家家，他们的财产正是我们现在所需求的生存物资。但是如何征收，征收哪些财产，征收多少财产对于之后的城市维稳工作非常重要，我们需要仔细区分哪些财产是“非法”的，哪些财产是“合法”的。但也许我们还有另一个选择，彻底的清算资产阶级..."
  lecgong.16.a:0 "各取所需"
+ lecgong.19.t:0 "上海的工人们"
+ lecgong.19.d:0 "自从五四运动上海工人的阶级意识开始萌芽以来，上海工人团体就是各路进步势力之间互相竞争的重要力量。最初是无政府主义者，后来是国民党与工团党。\n\n在1927年以前上海工人团体力量最强大的自然是由汪寿华、李立三、陈云、刘少奇等人组织全国总工会附属组织上海总工会，而在北伐战争失败后尽管上海总工会遭到打击但是依旧是一股不可小觑的力量，直到1932年的上海起义，那场极其不理智的冒险运动之后上海总工会遭到了毁灭性的打击，多位高层领导人锒铛入狱，多个附属工会被取缔，最关键是原本就通过把头、同乡会控制了不少非技术工人的帮会组织更进一步的彻底控制了底层工人运动。\n\n上海工团党基本停止活动，其成员只能以个人身份在各个技术性工人行会中活跃，尽管还是能够发动一些罢工运动但是实力大不如前，远不如通过协助上海工部局镇压起义工人的青帮们。杜月笙就以此摇身一变步入政坛，其手底下把持了多个半技术工人工会，或者用工团党的话说：“黄色工会”，比如陆京士控制的邮政工会、卷烟工人联合等等。\n\n不过帮会们也并非铁板一块，王亚樵控制的安徽旅沪劳工会、顾竹轩的闸北帮（由苏北黄包车工组成）为工团党人敞开了大门，他们与工团党人结成了联盟，为他们提供着支持。"
+ lecgong.19.a:0 "注意关注他们的存在"
  Shcgong.1.t:0 "丝厂女工曲"
  Shcgong.1.d:0 "才见东方放白光，披衣束幕急离床，回头细看孩子面，儿啊，母做工时儿面黄。\n刚泡茶汤奉公公，厂中汽笛响隆隆，莲头散发无心理，提着圆篮赶上工。\n幸喜牢门还未关，急忙走进调丝间，腾腾热气皮焦痛，不是为钱谁肯来？\n调丝调到十二点，拿来冷饭可充饥，低头想到丈夫苦，此刻拖车汗不离。\n沸水中间手不停，过了下午到黄昏，放工已在钟点外，厂前街中黑沉沉。\n急忙跨进家门口，听得孩儿哭母声。孩儿你莫叫娘抱，娘身酸痛不能熬。"
  Shcgong.1.a:0 "爸爸拉车归来末，带来白米好娘烧。"
