--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -502,15 +502,15 @@
  lecgong.3.a:0 "禁止他再宣传这种言论"
  lecgong.3.b:0 "这种事情等我们生存下去再去考虑吧"
  lecgong.4.t:0 "工人罢工"
- lecgong.4.d:0 "随着黑色星期一的阴霾笼罩上海特别市，各大企业突然破产，上海市的工人失业率在短短几天之内迅速攀升。在这样的情况下那些该死的工会贼人果然又聚集起失业工人在理事会门口罢工抗议，要求将他们无故辞退的企业赔偿工人损失。但是企业们哪里又有钱呢？最后又只能找到理事会要求理事会背后的各国政府施以援手。可是黑色星期一的冲击之下各国政府都泥菩萨过河自身难保，难道我们只能动用储备资金了吗？"
+ lecgong.4.d:0 "随着黑色星期一的阴霾笼罩上海特别市，各大企业在金融海啸的冲击下纷纷宣布破产，上海市的工人失业率在短短几天之内迅速攀升。在这样的情况下那些该死的工会贼人果然又聚集起失业工人在理事会门口罢工抗议，要求将他们无故辞退的企业赔偿工人损失。但是企业们哪里又有钱呢？最后又只能找到理事会要求理事会背后的各国政府施以援手。可是黑色星期一的冲击之下各国政府都泥菩萨过河自身难保，难道我们只能动用储备资金了吗？"
  lecgong.4.a:0 "给工人们赔偿让他们离开吧"
  lecgong.4.b:0 "我们自己都没钱，他们要闹就闹！"
  lecgong.5.t:0 "左联的加入"
- lecgong.5.d:0 "就在我们为了应对工人罢工焦头烂额的时候，鲁迅上海牵头成立的左翼作家联盟也加入到了罢工队伍里面，他们不断撰文抨击我们的政策，搞得更大的工人加入到了罢工的行列。真该死，要不我们就服个软吧，反正花的也不是我们自己的钱？"
+ lecgong.5.d:0 "就在我们为了应对工人罢工焦头烂额的时候，鲁迅上海牵头成立的左翼作家联盟也加入到了罢工队伍里面，他们不断撰文抨击我们的政策，搞得更大的工人加入到了罢工的行列。果然，在这次大罢工的背后又有工团党的人，这些该死的家伙又死灰复燃了。真该死，要不我们就服个软吧，反正花的也不是我们自己的钱？"
  lecgong.5.a:0 "让这帮工人拿了钱就滚蛋！"
  lecgong.5.b:0 "给钱？没门！他们要闹多久就闹多久！"
  lecgong.6.t:0 "黑帮的参和"
- lecgong.6.d:0 "工人越闹越大的同时，那些该死的黑社会渣滓也冒了出来，王亚樵的斧头帮还有顾竹轩的江北帮，不知道工会的人和这些人有什么不为人知的交易。这些混蛋居然帮着工人纠察队对抗我们的治安部队，这已经不是一般的暴民了！必须出重拳！但是也许我们就悄悄的从储备金里拿点给他们也行？反正汪寿华那家伙派来的代表也没有提什么过分的要求。"
+ lecgong.6.d:0 "工人越闹越大的同时，那些该死的黑社会渣滓也冒了出来，王亚樵的斧头帮还有顾竹轩的闸北帮，不知道工会的人和这些人有什么不为人知的交易。这些混蛋居然帮着工人纠察队对抗我们的治安部队，这已经不是一般的暴民了！必须出重拳！但是也许我们就悄悄的从储备金里拿点给他们也行？反正工会那些家伙派来的代表也没有提什么过分的要求。"
  lecgong.6.a:0 "好好好，我们给钱行了吧！"
  lecgong.6.b:0 "给特别行动部队打电话！"
  lecgong.6.c:0 "把坦克开出来，老子要送这些该死的家伙上天！"
@@ -690,6 +690,9 @@
  Shcgong.39.t:0 "自由王国"
  Shcgong.39.d:0 "“经过最高苏维埃的投票决定...在苏维埃共和国法律之内，对各路人士的结社不再加以禁止......”苏维埃主席话音未落，一侧席位便已有人暴起。\n\n刘仁静侧目望去，秦邦宪，王明，朱加什维利......果然不出所料。自从米夫主席遇刺，本就准备提上日程的言论解冻便遭到反对派的激烈抵抗。\n\n“像是颜惠庆，章士钊，舒尔金这样的资产阶级反动派，一天到晚鼓吹甚么传统，种族，还不枪毙了留着作甚！”王明的腮帮子气的鼓鼓的，将身子前的长桌敲的如同枪毙行刑时一般。\n\n共青团的书记易宽冷冷的回应道，就算是宣扬黑色百人团的思想，米夫主席在的时候也没有立法要枪毙吧。\n\n“按你这般言论，就是杀害米夫主席的凶手也不应该处死了！？”王明怒吼。\n\n“马克思主义者向来反对任何报刊被资本主义政府停刊，难道轮到我们就不同了吗？捍卫群众的言论自由也是社会主义者向来坚持的...”又是一声巨响，将伊米尔诺夫的争辩打断。"
  Shcgong.39.a:0 "无非是红色波拿巴的夺门而去"
+ Shcgong.40.t:0 "上海革命成功"
+ Shcgong.40.d:0 "看来中国的混乱更近一步了，远东最大的城市上海今日爆发了一场剧烈的争斗战，最终由左翼作家联盟和上海工团党以及流亡的俄罗斯共产党人组成的革命联盟取得了胜利，他们正在接管这座城市的方方面面，无论如何中国舞台上的玩家又要多一个了。"
+ Shcgong.40.a:0 "远东的梦巴黎这下真成巴黎了"
 
 ###何东
  LEC_HD: "上海特别市"
@@ -1076,9 +1079,9 @@
  Shcjidu.9.t:0 "益世广播电台"
  Shcjidu.9.d:0 "《益世报》是一家隶属于天主教会的报纸，由比利时籍神父雷鸣远于1915年10月10日在天津创办。《益世报》内容并不拘泥于宗教，涉及范围广泛，长期持反日爱国之立场，是新文化运动时期京津地区的重要报纸。在五四运动中，《益世报》甚至是五四运动中第一家被查封的报纸，后来在于斌主教带领下，逐步形成天津、北平、南京、上海、西安、重庆的《益世报》网。\n\n而随着时代的发展，纸质媒体终究有一天会被淘汰，尽管现在这样的趋势还不明显，但是高瞻远瞩的[SHC.GetLeader]主教决定创办益世广播电台，原《益世报》社长杨慕时任台长，同样的除了必要的传道工作之外，我们也还会播出新闻、评论、科教、戏曲及音乐节目。"
  Shcjidu.9.a:0 "呼号:XPBK"
- Shcjidu.10.t:0 "拆除夜总会"
- Shcjidu.10.d:0 "夜店是撒旦控制的世界的一部分，它们的目的是让自己屈服于罪恶的欲望。保罗在以弗所书4:17-24中对基督徒说话时谈到世俗行为的问题，“所以我告诉你们，并在主里坚持，你们不可再像外邦人那样生活，他们的想法。他们的悟性昏暗，与神的生命隔绝，因为他们的心刚硬而无知。失去了所有的敏感，他们把自己交给了肉欲，以致沉迷于各种不净，不断地贪求更多。然而，你并不是这样认识基督的。你肯定听说过他，并按照耶稣里的真理在他身上受教。关于你从前的生活方式，你被教导要脱去你的旧自我，这个旧自我正被它欺骗的欲望所腐蚀；在你的思想态度上被更新；并穿上新的自我，被创造成在真正的公义和圣洁中与上帝相似。保罗在这里描述了那些排斥神，放纵肉体，贪心行各样污秽的人。显然，上帝不希望我们如此轻易地、故意地把自己交给罪。\n\n上海是一个繁华的大都市，有数不尽的夜总会，四处充满了淫靡的气息。为了挽救上海市民，为了将这些不道德之物驱逐出去，我们将禁止并拆除上海的每一个夜总会。"
- Shcjidu.10.a:0 "愿上帝保佑"
+ Shcjidu.10.t:0 "上午七点四十四分"
+ Shcjidu.10.d:0 "霓虹灯的余晖仍在南京路上残留，街角的最后一间夜总会正被封上印有圣心徽记的封条。人群散去，唯余夜风穿堂而过，吹起路旁被遗弃的香烟壳与斑驳的广告纸。费诺·张站在街边，双手交握于胸前，感受着指尖念珠的微凉。他曾经走过这些门前，听见过那些浸润着欲望的笑声，也目睹过有人在昏黄灯光下堕落。如今，这一切终于落幕了。\n\n“光照在黑暗里，黑暗却不接受光。”（约翰福音 1:5）他在心中默念着，仿佛要说服自己去相信，今晚的行动正是主的旨意。\n\n今日午后，在圣弥额尔堂前，神父庄重地宣告：“撒旦的温床已然崩毁。”随之而来的，是赞美与掌声，是狂喜的泪水。教会的卫队踏入那些曾令人沉溺的场所，拆下门上的铜牌，掷入篝火。有人跪在灰烬前祈祷，亦有人在黑暗中悄然离去。\n\n“你们要从他们中间出来，与他们分别，不要沾不洁之物，我就收纳你们。”（哥林多后书 6:17）这是主的训诫，也是今晚行动的理由。上海应当是圣洁的，上海的子民应当从罪恶之中被拯救出来。\n\n然而，费诺·张仍然听见低语——那些消失的身影去了何处？那些昨日尚在灯红酒绿中的灵魂，今夜是否得到了救赎，抑或只是被迫隐匿？\n\n夜色沉沉，教堂钟声敲响了午夜，仿佛在向世界宣告罪恶的终结。然而，他的心底仍有疑问未曾散去。“人若赚得全世界，却赔上自己的生命，有什么益处呢？”（马太福音 16:26）"
+ Shcjidu.10.a:0 "主啊，光明降临之后，这座城市是否就此得救？"
  Shcjidu.11.t:0 "我们的领导者"
  Shcjidu.11.d:0 "出乎所有人预料的是我们真的在上海火并中豪取了胜利，迷失的上海城回到了主的怀抱。而当我们将要开始重建上海时，我们面临着一个尴尬的问题，在上海目前有两位分区主教。因为八省战火而撤离到上海的南京宗座代牧区主教于斌很难想象在短短的几个月内上海居然发生了这么大的巨变。尽管按照规范来说上海特别市的政权当然应该由上海宗座代牧区主宰，而南京代牧区和上海代牧区事实上也是平等的，但是南京的政治地位无论如何也远高于上海。如果未来教宗宣布在中国建立圣统制，被晋升为总教区的一定是南京而不是上海。况且相对于中国人身份的于斌主教来说，由身为法国人的惠济良主教担任上海特别市临时市长无疑是尴尬的。那么我们究竟要选择谁来主宰未来的上海呢？"
  Shcjidu.11.a:0 "惠济良主教更合适"
@@ -1093,6 +1096,39 @@
  Shcjidu.14.d:0 "被我们资助的上海教会终于发了寻求庇护的消息，但是我们和法国佬的战火迫在眉睫，我们该怎么选？"
  Shcjidu.14.a:0 "欢迎加入帝国公约！"
  Shcjidu.14.b:0 "代价太大了"
+ Shcjidu.15.t:0 "上午六点二十五分"
+ Shcjidu.15.d:0 "费诺·张站在窗前，手指无意识地揉搓着一枚古旧的圣母像吊坠，目光落在外滩那片已然焕然一新的旗帜之上。金色的圣彼得十字在微风中猎猎作响，宣示着这座城市的新主人。他本该感到欣慰，甚至骄傲——毕竟，他曾在弥撒时虔诚地祈祷，祈求主的光辉降临上海，使这片土地免于罪恶与腐朽。如今，主的国度似乎终于降临了，可为何他的心中仍然泛起不安？\n\n大街上的巡逻队伍步伐整齐，他们佩戴的徽章上镌刻着圣心的图案，枪支在阳光下闪着冷冽的光。教堂钟声回荡在空气里，仿佛在向世人宣告这一切的必然性。然而，费诺·张仍然记得昨夜听到的低语。有人在巷弄间传递着忧虑，有人低声诅咒这突如其来的变革。\n\n他回想起那日，在圣依纳爵堂前，几位神父庄重地宣读新政府的布告，誓言以主的公义重塑上海。他站在人群中，看见有信徒欢欣鼓舞，亦有人沉默低头。他想起昔日里那些在赌坊与舞厅流连的浪子，如今或许被迫跪在祭坛前忏悔，亦或是被拖入黑暗之中，再无人知晓他们的下落。\n\n窗外，传来几声急促的哨声，几辆挂着教会旗帜的汽车驶过，卷起阵阵尘土。他叹了口气，将吊坠攥紧在手心。上海确实变了，变得圣洁，变得肃穆，变得...陌生。他曾经渴望的那片乐土，如今就在眼前，可他却不知自己是否仍是它的一部分。"
+ Shcjidu.15.a:0 "主啊，这是祢的旨意吗？"
+ Shcjidu.16.t:0 "上午九点四十五分"
+ Shcjidu.16.d:0 "钟声敲响，余音在梵蒂冈式穹顶下回荡。费诺·张跪在长椅前，指尖缓缓划过手中的念珠，口中低声诵念《诗篇》：“耶和华是我的牧者，我必不至缺乏。”（诗篇 23:1）教堂内氤氲着焚香的气息，窗外的天色仍显昏暗，东方的晨曦尚未破开夜的残影。\n\n昨日傍晚，他亲眼见证了苏州河畔的那场焚烧——堆积如山的书册、画作、留声机唱片，在火光中化为焦黑的灰烬。站在教会卫队前的神父高声宣读：“不可爱世界和世界上的事。人若爱世界，爱父的心就不在他里面。”（约翰一书 2:15）人群中的信徒默默聆听，或是低声念诵圣咏，而那些曾将手稿交给印刷商的文人、曾在留声机前沉醉的歌者，只能在暗处沉默。\n\n火焰映照在一张张肃穆的面孔上，有人狂喜，也有人默然。费诺·张望向燃烧的书页，火舌贪婪地吞噬一行行墨迹。就在其中，他瞥见了一册《神曲》的残页，风将它吹起，飞旋着落入尘埃。他读到了那句尚未被焚尽的诗句：“抛弃一切犹豫，进入此地。”\n\n他的心头掠过一丝不安，却迅速将之压下。他该感到欣慰，正如教士所言，“弃绝谬误，方能归于真理。”上海已被洗涤，罪恶已被焚尽，如今是主的国度。然而，为何他的耳畔仍能听见隐约的哭声？"
+ Shcjidu.16.a:0 "主啊，谬误已焚，真理是否因此更显？"
+ Shcjidu.17.t:0 "上午十点十七分"
+ Shcjidu.17.d:0 "圣心医院的长廊里弥漫着药水的气味，铁床上的病人低声呻吟。费诺·张站在一间病房外，透过门缝望向里面的老人。\n\n那是徐医师，一个曾行医半生的医生，如今却在这张病床上奄奄一息。他的罪名是“违抗教会”，因为他曾在一间隐秘的诊所里救治那些被当局视为“不洁”之人——罪犯、流亡者，甚至妓女。\n\n费诺·张缓缓推门而入，房间里只剩烛光摇曳，映照着老人消瘦的面孔。“你来了。”徐医师虚弱地笑了笑，“你是来看我，还是来看一个被定罪的灵魂？”\n\n费诺·张沉默片刻，终于低声道：“‘我病了，你们看顾我；我在监里，你们来看我。’”（马太福音 25:36）\n\n老人的目光微微一震，而后轻轻叹息。他缓缓抬起手，指向床头的一只木箱。费诺·张走上前，打开箱子，发现里面整齐地摆放着一些破旧的医疗器械，以及几本早已被查禁的医学书籍。“这些东西，救过许多人的命。”徐医师轻声道，“可如今...你们宁愿让他们死。”\n\n费诺·张望着那些泛黄的书页，心头忽然一紧。昔日的教诲在他脑海中交错——教会的命令，信仰的原则，善与恶的界限……可在这间病房里，在这名垂垂老矣的医生面前，那些界限为何变得如此模糊？\n\n他缓缓合上箱子，心中生出一个连他自己都不敢深究的疑问。"
+ Shcjidu.17.a:0 "主啊，我们肃清了罪恶，却遗忘了怜悯？"
+ Shcjidu.18.t:0 "上午十一点五十六分"
+ Shcjidu.18.d:0 "“你确定要做这件事吗？”\n\n夜风卷起码头上的潮湿气息，远方的圣伯多禄旗帜在暗夜中低垂，仿佛某种无声的注视。费诺·张站在仓库门口，对面的年轻人裹紧了风衣，眼神躲闪不定。\n\n“我...我不知道。”年轻人低声道，他的声音因恐惧而颤抖，“他们...他们已经带走了我的父亲，他只是个书商。”\n\n费诺·张沉默了，他的指尖摩挲着怀中的念珠，耳边响起了昔日神父的教诲：“义人必兴盛，恶人终被剪除。”但这少年是恶人吗？他只是个怀抱几本旧书的青年，一个在教会法令下被剥夺了过去的人。\n\n“你们要彼此相爱，像我爱你们一样，这就是我的命令。”（约翰福音 15:12）\n\n他闭上眼，感到夜色深沉，沉得仿佛连光都无法穿透。\n\n“走吧。”他终于低声说。\n\n年轻人愣住了，而后转身消失在夜幕里，身影隐没在码头的阴影之中。\n\n费诺·张立在原地，长久未曾动弹。他听见海浪轻轻拍打着堤岸，仿佛某种喑哑的祈祷。"
+ Shcjidu.18.a:0 "主啊，黑暗已退，我的心为何仍感迷失？"
+ Shcjidu.19.t:0 "正午十二点三十分"
+ Shcjidu.19.d:0 "雨后的空气带着一丝寒意，湿润的石板路倒映着街灯的光。费诺·张站在圣母大教堂的门前，凝视着台阶下那名瑟缩着的女子。她衣衫凌乱，怀中抱着一个昏昏欲睡的婴儿，脸上沾着污泥，眼神里是深深的恐惧。\n\n“求您...求您帮帮我。”她低声说道，声音几乎被夜风吹散，“他们...他们说我犯了罪，可我的孩子...他什么都不懂...”\n\n费诺·张沉默了。他知道她是谁，或至少知道她的身份——那些曾依靠夜幕为生的人，如今无处可去。新的法令发布后，青楼早已被封禁，昔日的烟花巷成了沉寂的废墟。神父们在讲道中宣布：“‘岂不知不义的人不能承受神的国吗？’”（哥林多前书6:9）那些留在其中的人，要么顺从救赎，要么被世界遗弃。\n\n可她的孩子呢？那无知的小生命，在母亲怀中安睡，无从知晓世界的寒冷。\n\n“‘凡劳苦担重担的人，可以到我这里来，我就使你们得安息。’”（马太福音 11:28）他轻声念出这句经文，仿佛是在安慰她，也是在安慰自己。然后，他伸出手，将她扶起。"
+ Shcjidu.19.a:0 "主啊，我们拯救了她的灵魂，可她的躯体又将何去何从？"
+ Shcjidu.20.t:0 "午后一点二十分"
+ Shcjidu.20.d:0 "黄浦江上雾气弥漫，水面映照着若隐若现的圣伯多禄旗帜。费诺·张裹紧风衣，沿着码头缓步而行，耳边传来细碎的交谈声。\n\n“你确定要离开？”“我别无选择。”\n\n他停下脚步，顺着声音望去，看到几个身影立在货船旁。最年轻的那个紧紧攥着一张旧护照，脸上满是犹豫。\n\n“上海...已经不再是我的家了。”年轻人低声道，目光投向远方的江面，“他们说我是异端，因为我读过那些被禁止的书。我只是...想知道真理。”\n\n费诺·张垂下眼眸。他听说过最近的逮捕行动，听说过那些因“传播谬误”而被带走的人。有人被送入教会的收容所，接受“灵魂净化”；有人则彻底消失，再无消息传来。\n\n“‘你们必晓得真理，真理必叫你们得以自由。’”（约翰福音 8:32）他缓缓说道。\n\n年轻人怔了一瞬，而后苦笑：“但谁来定义真理？”\n\n船上的引擎轰鸣，费诺·张站在雾气里，看着他们登船离去，逐渐隐没在夜色之中。他没有阻止他们——或许，逃离也是一种救赎。"
+ Shcjidu.20.a:0 "主啊，我们肃清了异端，可若他们也在寻求真理，我们又该如何审判？"
+ Shcjidu.21.t:0 "午后两点二十六分"
+ Shcjidu.21.d:0 "木质地板在脚步声下微微颤抖，斑驳的光影与飘浮的尘埃交织成一幅破碎的画面。费诺·张站在书房门口，眼神凝重地注视着室内那狼藉不堪的景象：昔日充满智慧和求知热情的书架如今早已空荡，只有散落在地上的几张残破书页，低声诉说着过去的辉煌。他的心跳不由自主地加速，内心翻涌着既敬畏又恐惧的情绪。他知道，这一切不仅仅是房间的残败，更象征着那被禁锢的思想与真理的凋零。费诺·张深吸一口气，试图让自己平静下来，但脑海中不断闪现的疑问和痛楚，却让他感到无比沉重。他曾在无数个夜晚苦苦求索过那些被视为“异端”的知识，也曾在心底怀疑，究竟是信仰本身的严苛，还是人心的脆弱在阻挡真理的曙光。\n\n屋内，王教授正被两名神父押坐在摇摇欲坠的木椅上。他那锐利的目光仿佛能穿透重重迷雾，直击人心，令费诺·张感受到一种无形的压力，仿佛自己的内心所有的矛盾和摇摆都已赤裸裸地展现在众人面前。“你们在找什么？”王教授的声音低沉而坚定，似乎在试图唤回那曾经属于他的智慧与自由。\n\n一名神父冷笑着回答：“你很清楚。教会已明令禁止传播异端，你的藏书中究竟藏了多少被视为禁忌之物？”费诺·张的目光落在桌上那本被撕去封皮的书籍上，书页上斑驳的文字依稀可辨出“物——进——”的残痕。他的心猛然一紧，那被撕裂的字句仿佛在无声控诉着一个时代对知识的扼杀。他喃喃低语：“‘起初神创造天地。’”（创世记 1:1）这句熟悉的经文在他心中激起一丝微弱的安慰，仿佛提醒他，即使万物被摧毁，创世的真理仍不可磨灭。然而，费诺·张的内心却在这一刻分崩离析：他究竟是要捍卫这即将失传的知识，还是顺从那日益严苛的法令？\n\n在短暂的沉默中，他看向王教授，后者眼中闪烁的倔强与绝望让费诺·张陷入深深的自省。他曾经无比虔诚地信奉教义，认为真理与信仰是不可分割的。然而，面对今日这残酷的现实，他开始怀疑，那些驱逐异端的举措是否真的是上帝的旨意？或许，在捍卫信仰的名义下，知识和自由正一点点被践踏。窗外的钟声缓缓响起，每一下都仿佛在敲打着他动摇的信仰和内心的彷徨。费诺·张闭上眼睛，仿佛能听到内心深处那微弱而颤抖的祷告声："
+ Shcjidu.21.a:0 "主啊，我们捍卫了信仰，可我们是否在拒绝知识？"
+ Shcjidu.22.t:0 "下午三点整"
+ Shcjidu.22.d:0 "审讯室内，昏黄的灯光下，每一道阴影都显得格外狰狞。铁制的桌面上，一枚银制的十字架散发出冷冽的光芒，仿佛在审视着这场灵魂的拷问。费诺·张坐在旁听席上，眼神始终紧锁着那张已满是疲惫与绝望的面孔。对面的被审讯者双手被束缚，身上那件破旧的囚服上斑斑血迹，无声地诉说着他内心所承受的折磨和耻辱。主审官的声音沉稳而冰冷：“承认吧，你曾是教友，却选择背弃神，背弃神的恩典。”这句话似乎将所有的光明和希望一齐抽离，只留下无尽的黑暗与寒冷。\n\n被审讯者缓缓抬起头，眼中闪烁着复杂而深邃的情感。他微微一笑，笑意中混杂着无奈、悲哀与嘲讽：“背弃？”他的声音低沉而有力，“不，我只是选择了沉默。”\n\n费诺·张的内心激起层层涟漪。那些曾与他一同在圣母大教堂虔诚祷告的日子，此刻似乎都在眼前浮现。他记得那时的自己，满怀热忱与坚定，相信真理必将战胜一切黑暗；而今天，他却目睹了这一切信仰的僵化与冷酷。\n\n他轻声低诵：“‘你们的光也当这样照在人前。’”（马太福音 5:16）每一个字都在他心中回响，但同时也刺痛了他那因矛盾与疑虑而早已疲惫的灵魂。那一刻，他在审视自己：难道自己也正被这无情的体制所奴役？在维护所谓的“正统”与“纯洁”时，是否也扼杀了人心中那真实的光芒？\n\n审讯室内的气氛凝重而沉闷，时间仿佛在这一刻静止。费诺·张紧握着手中的念珠，感受到冰凉的珠子仿佛也在默默控诉这份无情的冷漠。被审讯者的目光渐渐转向他，似乎在用那复杂的眼神问道：“你可曾怀疑过，这一切是否真的是神的安排？”\n\n在这一刻，费诺·张的心仿佛被撕裂，内心的信仰与理智激烈碰撞，他不知道该如何抉择：是继续坚守那僵化的信条，还是试图寻找属于真理的另一种表达方式？他在心中呐喊，却又害怕自己的呐喊会引来更深的惩罚。"
+ Shcjidu.22.a:0 "主啊，我们清理了异端，可真正的信仰是否也已被禁锢？"
+ Shcjidu.23.t:0 "下午六点整"
+ Shcjidu.23.d:0 "晨曦尚未完全驱散夜的余韵，修道院庭院中弥漫着湿润的泥土气息和初晨露水的清凉。东方微弱的光线穿透古老的窗棂，映照在斑驳的青石板上。费诺·张独自徘徊于庭院，心中沉重的思绪与外界的宁静形成鲜明对比。\n\n不远处，一位衣衫褴褛的老人跪在冰冷的地面上，颤抖着额头贴近泥土，似乎在向上苍倾诉着无尽的苦楚和孤独。那微弱、几近沙哑的乞求声传入费诺·张的耳中：“求求你们...给我一口水。”这一刻，费诺·张的内心掀起滔天巨浪。曾几何时，他也在这样的晨曦中，为了信仰而奋不顾身；而今，他却看着人间的温情在冰冷的制度下逐渐凋零。他走近那老人，目光在那满是皱纹和风霜的脸庞上久久停留，内心感受到一种无法言喻的痛楚——仿佛看见了自己曾经的影子。\n\n站在门口的修士面无表情，冷冷地宣告道：“教会的恩典，不施舍给不悔改的罪人。”这冰冷的话语在费诺·张的心中激起强烈的反感与悲哀，难道宽恕与怜悯也应如此被剥夺？他低头望着老人颤抖的双手，心中不断回响着《马太福音》中的话语：“‘因为我饿了，你们给我吃；渴了，你们给我喝。’”（马太福音25:35）这不仅是一段经文，更像是一声来自上苍的呼唤，提醒世人何为真正的仁慈与爱。\n\n费诺·张的内心在剧烈挣扎：他始终坚守着神圣的信仰，但又无法忽视那些因严苛制度而饱受苦难的人们。他闭上眼，仿佛看见了无数被冷漠拒绝的灵魂在黑暗中孤独徘徊，而他自己，是否也正在渐渐失去那颗怜悯之心？\n\n最终，他缓缓蹲下，将怀中的水壶递给老人，手指因决然而微微颤抖。那一刻，时间仿佛停滞，只有他内心的忏悔与祷告在空旷的庭院中久久回响。"
+ Shcjidu.23.a:0 "主啊，我们守护了圣洁，可怜悯是否已被逐出这座城？"
+ Shcjidu.24.t:0 "破晓时分"
+ Shcjidu.24.d:0 "天主之母堂的钟声悠扬，清晨带着寒意的空气被破晓光辉抚慰。光线透过彩色玻璃窗，投下光影，仿佛天堂的讯息。费诺·张坐在长椅上，手中握着本翻旧的《圣经》，纸张与油墨的气息让他感受到历史的智慧与痛苦。他内心不安，看着《圣经》眼神迷茫，晨曦温柔，内心却波澜翻涌。他不知道自己在担心什么，光辉也无法使他平静。教会的法令已贯彻，城市远离了腐化堕落，可他心底的空虚与不安仍未消散。\n\n他低头摩挲《圣经》封皮，那触感如同沉重的记忆。“我们赢得了城市，清除了恶行...”他声音疲惫困惑，“可为何我仍然觉得不安？为何我的心依然难以平静？”\n\n一位看不清长相，留着长发，蓄着胡须的神父迈着轻盈而安稳的步伐，走到费诺·张身边，他未见过这位神父。神父温和地说：“你看起来很忧虑。”费诺·张抬头，与神父交汇的目光中没有责备，只有深沉的理解。神父缓缓坐下，注视着祭坛上微微跳跃的烛火，似乎在回应他内心的疑惑与迷茫。费诺·张沉默片刻，合上《圣经》，指尖停留在书页上，烛光照在他脸上，柔和温暖，但内心的空虚如影随形。“我曾经相信我们所做的一切是正确的。”他低声说，声音几乎被钟声淹没。“我们清除了罪恶，建立了新秩序，让城市回到主的怀抱...可我依然感到迷茫，这条路并不如想象中清晰。”\n\n神父没有立刻回答，轻轻叹了口气，目光温和深邃。“我实在告诉你们，‘人若说自己无罪，便是自欺，真理也不在他心里。’”他低声念叨着，声音轻柔却有力量，触动了费诺·张心底的恐惧。\n\n费诺·张猛然抬头，眼中震动困惑。那经文如利剑刺中他最脆弱的地方，心跳加速，他意识到自己追求的“净化”与“秩序”，是否符合上帝的旨意？他们是在捍卫正义，还是剥夺了宽恕与怜悯？神父目光依旧温和，语气沉静：“我们肃清了罪恶，却也忘记了宽恕。主耶稣从未忘记宽恕。”这句话如晨曦中的光线，照进费诺·张内心的黑暗。新秩序下，是否遗留了伤害与遗憾？他们追求的完美，是否在角落里埋下创伤？\n\n烛光跳跃，映照两人面庞，他依旧无法看清神父的面庞，费诺·张望着烛光，目光空洞深远。沉默中，费诺·张内心生出恐惧：新秩序是否符合主的旨意？还是他们被决定蒙蔽，走向偏离真理的道路？他深吸一口气，想驱散思绪与焦虑，但不安仍在。神父轻拍他肩膀，给予安慰与鼓励，低声说：“我们若认自己的罪，祂是信实的，是公义的，必要赦免我们的罪，洗净我们一切的不义。”"
+ Shcjidu.24.a:0 "主啊，若我行的路偏离了你的道，求你如寻回浪子般将我挽回。"
+ Shcjidu.25.t:0 "上海易主"
+ Shcjidu.25.d:0 "看来中国的混乱更近一步了，远东最大的城市上海今日爆发了一场剧烈的争斗战，最终由德国人扶持的上海天主教会取得了最终的胜利，他们正在接管这座城市的方方面面，用他们的法令规训这座繁华都市，无论如何中国舞台上的玩家又要多一个了。"
+ Shcjidu.25.a:0 "日期满了，神的国近了。你们要悔改，信福音！"
 
 ###新教
  SHC_CHR: "上海总教区"
@@ -1495,9 +1531,12 @@
  SHCwaijiao.18.t:0 "人靠衣装"
  SHCwaijiao.18.d:0 "在上海，衣着的重要性与势利尤为相关。城市中的一句流行语揭示了社会的这一倾向：“只认衣衫不认人”。著名的左翼作家鲁迅对这种社会习气有过尖锐的批评：“在上海生活，穿时髦衣服的比土气的便宜。如果一身旧衣服，公共电车的车掌会不照你的话停车，公园看守会格外认真的检查入门券，大宅子或大客寓的门丁会不许你走正门。所以，有些人宁可居斗室，喂臭虫，一条洋服裤子却每晚必须压在枕头下，使两面裤腿上的折痕天天有棱角。然而更便宜的是时髦的女人。这在商店里最看得出：挑选不完，决断不下，店员也还是很能忍耐的。不过时间太长，就须有一种必要的条件，是带着一点风骚，能受几句调笑。否则，也会终于引出普通的白眼来。”人们形容这些爱好虚荣的人为：“洋装瘪三，自己烧饭。”"
  SHCwaijiao.18.a:0 "马靠鞍"
- SHCwaijiao.19.t:0 "陈月华的一天"
- SHCwaijiao.19.d:0 "陈月华是早晨家里第一个起床的人。穿好衣服、刷完牙，她就急匆匆地穿过街道赶往菜场去买新鲜的蔬菜、鱼和肉。这家菜场位于赫德路和哈同路之间的一条小马路安南路上，距离她的家只有1到2分钟的路程。整条马路大约865英尺长、65英尺宽。早晨交通封闭，人行道上满是摊位。尽管菜场全天候开放，但通常只有在上午卖菜。很多居民喜欢一大清早就去菜场，因为这时的食品最新鲜、种类最丰富。\n\n陈月华从莱场回到家，马上开始生煤球炉。生火有三个步骤：首先在炉子的底格燃着一张报纸或是其他废纸，然后把木柴放在火上，当所有的木柴都点燃后再放上煤球。这一整天里差不多每个小时都要往炉子里添煤球，为的是不让炉火熄灭。她有时注意到木柴或煤球快用完了，就要在煤球店开门后去购买。尽管大多数家庭不必天天去煤球店，但它仍是上海人经常光顾的地方。煤球体积大，需要占用一定的空间，而上海居住条件拥挤，因此大多数家庭只储存够烧一个星期的煤球。为了让煤球炉整日不熄，如果像大多数家庭那样从早上6点烧到晚上9点，那么一个月就需要大约276磅重的煤球。早上煤球炉生火还需要木柴，这些木柴也要到煤球店购买。下午，大多数家庭不必让炉火烧得很旺，但也不能让火熄灭，因为还要用于准备晚饭。他们用煤灰浆(煤灰同水混合在一起)暂时封住火头，湿的煤灰浆封在炉子的顶部，这样炉子下面的煤就会燃烧得很慢。一旦把煤灰拿走，炉火会重新旺起来。有些家庭就用这种方法让炉火整夜不熄，这样第二天早晨他们就不必再生炉子了。\n\n生好炉子，陈月华紧接着就要去大饼店买豆浆、油条和别的早餐。对上海大多数家庭来说，早餐十分简单，往往只有泡饭(在沸水里加热隔夜的剩饭而做成的稀饭)。对大多数上海人来说，这是最经济、最方便的早餐。就着酱菜、豆腐乳、肉松、咸蛋、皮蛋吃完泡饭，人们便精神抖擞地去上班了。但是泡饭不顶饿，不到中午人又感到饿了。所以像大饼、油条或豆浆这些从大饼店购买的食品经常作为早餐的补充和下午的点心。不用说，从大饼店买现成的饭食比自己做泡饭开销要大得多。\n\n像陈月华这样的家庭主妇，下午早些时候是安静的休息的时间。不像在早晨要急匆匆地购买供一天食用的新鲜食品，下午做事要从容一些。或者去附近的商业中心买点东西，或者于脆散散步。陈月华经常会去静安寺附近转转，在那里她可以买到在街区商店所没有的东西。如果不打算购物的话她会走进静安寺去烧一炷香以求得神佛的保佑，尽管她认为自己并不是一个非常信仰宗教的人。对她来说，去寺庙仅仅是一种社会习俗而已。不管怎么说，来这里步行只不过5分钟的路程。在空闲的下午，家庭主妇们偶尔也会聚在一起搓搓麻将，而勤劳的主妇则抓紧这缝缝补补或裁剪衣服的大好时光。\n\n天黑后大多数街区的商店都关门打烊了。为了满足居民和过路人的需要，烟纸店通常要到晚上9点甚至更晚才关门，尤其是在夏天。对陈月华来说，烟纸店是她一天任何时候都有可能光顾的地方：早晨去买生炉子用的火柴，下午去买做针线活用到的针，或是晚上洗东西的时候去买一块肥皂。烟纸店也是她那位有烟瘾的丈夫经常光顾的地方。烟纸店更是孩子们喜爱的地方，孩子们常常在那里得到他们的第一个玩具，花掉他们口袋里的钱。孩子们是烟纸店里购买糖果和零食的重要的常客。有些零食的品种也只有烟纸店才有，差不多是专为孩子们准备的。果脯类零食中诸如橄榄、山楂盐金枣和萝卜干，都是孩子们喜欢的零食。在弄堂里，常常可以看见孩子们边玩耍一边细细品嚼着从烟纸店头来的果脯。很有可能就是在这样的店铺中，孩子们有了他或她一生中第一次同商业有关的经历。"
+ SHCwaijiao.19.t:0 "陈月华的一天：（一）"
+ SHCwaijiao.19.d:0 "陈月华是早晨家里第一个起床的人。穿好衣服、刷完牙，她就急匆匆地穿过街道赶往菜场去买新鲜的蔬菜、鱼和肉。这家菜场位于赫德路和哈同路之间的一条小马路安南路上，距离她的家只有1到2分钟的路程。整条马路大约865英尺长、65英尺宽。早晨交通封闭，人行道上满是摊位。尽管菜场全天候开放，但通常只有在上午卖菜。很多居民喜欢一大清早就去菜场，因为这时的食品最新鲜、种类最丰富。\n\n陈月华从莱场回到家，马上开始生煤球炉。生火有三个步骤：首先在炉子的底格燃着一张报纸或是其他废纸，然后把木柴放在火上，当所有的木柴都点燃后再放上煤球。这一整天里差不多每个小时都要往炉子里添煤球，为的是不让炉火熄灭。她有时注意到木柴或煤球快用完了，就要在煤球店开门后去购买。尽管大多数家庭不必天天去煤球店，但它仍是上海人经常光顾的地方。煤球体积大，需要占用一定的空间，而上海居住条件拥挤，因此大多数家庭只储存够烧一个星期的煤球。为了让煤球炉整日不熄，如果像大多数家庭那样从早上6点烧到晚上9点，那么一个月就需要大约276磅重的煤球。早上煤球炉生火还需要木柴，这些木柴也要到煤球店购买。下午，大多数家庭不必让炉火烧得很旺，但也不能让火熄灭，因为还要用于准备晚饭。他们用煤灰浆(煤灰同水混合在一起)暂时封住火头，湿的煤灰浆封在炉子的顶部，这样炉子下面的煤就会燃烧得很慢。一旦把煤灰拿走，炉火会重新旺起来。有些家庭就用这种方法让炉火整夜不熄，这样第二天早晨他们就不必再生炉子了。\n\n生好炉子，陈月华紧接着就要去大饼店买豆浆、油条和别的早餐。对上海大多数家庭来说，早餐十分简单，往往只有泡饭(在沸水里加热隔夜的剩饭而做成的稀饭)。对大多数上海人来说，这是最经济、最方便的早餐。就着酱菜、豆腐乳、肉松、咸蛋、皮蛋吃完泡饭，人们便精神抖擞地去上班了。但是泡饭不顶饿，不到中午人又感到饿了。所以像大饼、油条或豆浆这些从大饼店购买的食品经常作为早餐的补充和下午的点心。不用说，从大饼店买现成的饭食比自己做泡饭开销要大得多。"
  SHCwaijiao.19.a:0 "三百六十五天里普通的一天"
+ SHCwaijiao.20.t:0 "陈月华的一天：（二）"
+ SHCwaijiao.20.d:0 "像陈月华这样的家庭主妇，下午早些时候是安静的休息的时间。不像在早晨要急匆匆地购买供一天食用的新鲜食品，下午做事要从容一些。或者去附近的商业中心买点东西，或者于脆散散步。陈月华经常会去静安寺附近转转，在那里她可以买到在街区商店所没有的东西。如果不打算购物的话她会走进静安寺去烧一炷香以求得神佛的保佑，尽管她认为自己并不是一个非常信仰宗教的人。对她来说，去寺庙仅仅是一种社会习俗而已。不管怎么说，来这里步行只不过5分钟的路程。在空闲的下午，家庭主妇们偶尔也会聚在一起搓搓麻将，而勤劳的主妇则抓紧这缝缝补补或裁剪衣服的大好时光。\n\n天黑后大多数街区的商店都关门打烊了。为了满足居民和过路人的需要，烟纸店通常要到晚上9点甚至更晚才关门，尤其是在夏天。对陈月华来说，烟纸店是她一天任何时候都有可能光顾的地方：早晨去买生炉子用的火柴，下午去买做针线活用到的针，或是晚上洗东西的时候去买一块肥皂。烟纸店也是她那位有烟瘾的丈夫经常光顾的地方。烟纸店更是孩子们喜爱的地方，孩子们常常在那里得到他们的第一个玩具，花掉他们口袋里的钱。孩子们是烟纸店里购买糖果和零食的重要的常客。有些零食的品种也只有烟纸店才有，差不多是专为孩子们准备的。果脯类零食中诸如橄榄、山楂盐金枣和萝卜干，都是孩子们喜欢的零食。在弄堂里，常常可以看见孩子们边玩耍一边细细品嚼着从烟纸店头来的果脯。很有可能就是在这样的店铺中，孩子们有了他或她一生中第一次同商业有关的经历。"
+ SHCwaijiao.20.a:0 "三百六十五天里普通的一天"
 
 ###军事线
  SHC_city_never_sleeps_never_falls_idea:0 "生存是第一要务"
